# medallion-funs-strategies

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  hmm_math_derivation.md  hmm_regime_detection.py  pyproject.toml
services/data-generator/: Dockerfile  pyproject.toml
services/data-generator/src/data_generator/: __init__.py  app.py  routes.py
services/data-generator/tests/: test_data.py  test_routes.py
services/trading-system/: Dockerfile  pyproject.toml
services/trading-system/src/trading_system/: __init__.py  app.py  client.py  engine.py  routes.py
services/trading-system/tests/: test_client.py  test_engine.py  test_routes.py
src/renaissance_trading/: __init__.py  data.py  hmm.py  main.py
tests/: test_data.py  test_hmm.py
